changed landing page and added package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
     "jquery-scrollify": "^1.0.21"
-  }
+  },
+  "name": "zest",
+  "description": "Website for a restaurant",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/blumrj/zest.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/blumrj/zest/issues"
+  },
+  "homepage": "https://github.com/blumrj/zest#readme"
 }
